render game elements

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,12 @@
 <body>
     <nav>
         <h1>Scuuba Duu</h1>
-        <a href="#">Link1</a>
-        <a href="#">Link2</a>
-        <a href="#">Link3</a>
+        <a href="#">Github</a>
+        <a href="#">LinkedIn</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Angelist</a>
     </nav>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="900" height="600"></canvas>
     <script type="text/javascript" src="../dist/bundle.js"></script>
     <div class="bottom-container">
         <section>
