create username input, gameover screen

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,17 @@
         <a href="#">Portfolio</a>
         <a href="#">Angelist</a>
     </nav>
-    <canvas id="canvas" width="900" height="600"></canvas>
-    <script type="text/javascript" src="../dist/bundle.js"></script>
+    <div id="wrapper">
+        <canvas id="canvas" width="900" height="600"></canvas>
+        <script type="text/javascript" src="../dist/bundle.js"></script>
+        <div id="input-username">
+            <h2>Enter Username</h2>
+            <div id="form">
+                <input type="text" id="name" size=15>
+                <button id="submitName">OK</button>
+            </div>
+        </div>
+    </div>
     <div class="bottom-container">
         <section>
             <h3>High Scores</h3>
