write score data to firebase

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,25 @@
         </section>
     </div>
 
-    
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+        apiKey: "AIzaSyBsOt6NM1cZ8f4sk95odFm3TuAR6--pzLk",
+        authDomain: "scuuba-duu.firebaseapp.com",
+        databaseURL: "https://scuuba-duu.firebaseio.com",
+        projectId: "scuuba-duu",
+        storageBucket: "scuuba-duu.appspot.com",
+        messagingSenderId: "465224114343",
+        appId: "1:465224114343:web:f97b0e7b19fca1d4f13b82"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+</script>
 </body>
 </html>
