display high scores

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     <div class="bottom-container">
         <section>
             <h3>High Scores</h3>
+            <ul id="high-scores"></ul>
         </section>
         <section>
             <h3>How To Play</h3>
