styles and instructions

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Scuuba Duu</title>
 </head>
 <body>
-    <nav>
+
         <h1>Scuuba Duu</h1>
+    <nav>
         <a href="#">Github</a>
         <a href="#">LinkedIn</a>
         <a href="#">Portfolio</a>
@@ -28,19 +29,27 @@
             </form>
         </div>
     </div>
+
+
     <div class="bottom-container">
         <section>
-            <h3>High Scores</h3>
+            <h3>Deepest Dives</h3>
             <ul id="high-scores"></ul>
         </section>
         <section>
             <h3>How To Play</h3>
-            <ul>
-                <li>Keep diving lower to get points</li>
-                <li>Keep you air levels up by hitting bubbles</li>
-                <li>Collect coral and sand dollars for additional points</li>
-                <li>Avoid shark attacks</li>
-            </ul>
+            <ol>
+                <li> &#8592; &#8593; &#8594; &#8595;</li>
+                <li>Control the diver with arrow keys</li>
+                <li>Get points for diving deeper (&#8595;)</li>
+                <li>Collect coral and sand dollars for bonus points</li>
+                <li>Maintain O2 levels by colliding with bubbles</li>
+                <li>Jelly Fish shock and paralyze you</li>
+                <li>Sting Rays suck up O2 if close by</li>
+                <li>Shark attacks = Immediate Death</li>
+
+                
+            </ol>
         </section>
     </div>
 
