--- a/index.html
+++ b/index.html
@@ -7,15 +7,34 @@
     <title>Scuuba Duu</title>
 </head>
 <body>
-
-        <h1>Scuuba Duu</h1>
     <nav>
-        <a href="#">Github</a>
-        <a href="#">LinkedIn</a>
-        <a href="#">Portfolio</a>
-        <a href="#">Angelist</a>
+        <h1>Scuuba Duu</h1>
+        <a id="dd-link">Deepest Dives</a>
+        <a id="htp-link">How to Play</a>
     </nav>
     <div id="wrapper">
+        <div id="overlay" class="ov hidden">
+            
+            <span id="x-link" >&#x2716;</span>
+            <section id="dd-container" class="hidden">
+                <h3>Deepest Dives</h3>
+                <ul id="high-scores"></ul>
+            </section>
+            <section id="htp-container" class="hidden">
+                <h3>How to Play</h3>
+                <ol>
+                    <li> &#8592; &#8593; &#8594; &#8595;</li>
+                    <li>Control the diver with arrow keys</li>
+                    <li>Get points for diving deeper (&#8595;)</li>
+                    <li>Collect coral and sand dollars for bonus points</li>
+                    <li>Maintain O2 levels by colliding with bubbles</li>
+                    <li>Jelly Fish shock and paralyze you</li>
+                    <li>Sting Rays suck up O2 if close by</li>
+                    <li>Shark attacks = Immediate Death</li>
+                </ol>
+            </section>
+        </div>
+
         <canvas id="canvas" width="900" height="600"></canvas>
         <script type="text/javascript" src="./dist/bundle.js"></script>
         <div id="input-username" class="hidden">
@@ -32,26 +51,15 @@
 
 
     <div class="bottom-container">
-        <section>
-            <h3>Deepest Dives</h3>
-            <ul id="high-scores"></ul>
-        </section>
-        <section>
-            <h3>How To Play</h3>
-            <ol>
-                <li> &#8592; &#8593; &#8594; &#8595;</li>
-                <li>Control the diver with arrow keys</li>
-                <li>Get points for diving deeper (&#8595;)</li>
-                <li>Collect coral and sand dollars for bonus points</li>
-                <li>Maintain O2 levels by colliding with bubbles</li>
-                <li>Jelly Fish shock and paralyze you</li>
-                <li>Sting Rays suck up O2 if close by</li>
-                <li>Shark attacks = Immediate Death</li>
-
-                
-            </ol>
-        </section>
     </div>
+
+        <footer>
+            <a>Created by Nicole &#8594; </a>
+            <a href="#">Github</a>
+            <a href="#">LinkedIn</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Angelist</a>
+        </footer>
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
