add links, add icons

--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
             
             <span id="x-link" >&#x2716;</span>
             <section id="dd-container" class="hidden">
-                <h3>Deepest Dives</h3>
+                <h3>~ Deepest Dives ~</h3>
                 <ul id="high-scores"></ul>
             </section>
             <section id="htp-container" class="hidden">
                 <h3>How to Play</h3>
                 <ol>
-                    <li> &#8592; &#8593; &#8594; &#8595;</li>
-                    <li>Control the diver with arrow keys</li>
-                    <li>Get points for diving deeper (&#8595;)</li>
+                    <li>Control the diver with arrow keys & get points for diving deeper (&#8595;)</li>
+                    <li style="color: orange; font-size: 25px; padding: 0;"> &#8592; &#8593; &#8594; &#8595;</li>
                     <li>Collect coral and sand dollars for bonus points</li>
+                    <img src="./src/assets/coral-sanddollar.png" alt="items-icon">
                     <li>Maintain O2 levels by colliding with bubbles</li>
-                    <li>Jelly Fish shock and paralyze you</li>
-                    <li>Sting Rays suck up O2 if close by</li>
-                    <li>Shark attacks = Immediate Death</li>
+                    <img src="./src/assets/bubbles.png" alt="bubbles-icon">
+                    <li>Jellyfish shock and paralyze you</li>
+                    <li>Stingrays suck up O2 if close by</li>
+                    <li>Shark attack = immediate death</li>
+                    <img src="./src/assets/shark-jelly-stingray.png" alt="enemies-icon">
                 </ol>
             </section>
         </div>
@@ -55,31 +57,10 @@
 
         <footer>
             <a>Created by Nicole &#8594; </a>
-            <a href="#">Github</a>
-            <a href="#">LinkedIn</a>
-            <a href="#">Portfolio</a>
+            <a href="http://www.illustration.nicolesamanich.com/">Website</a>
+            <a href="https://github.com/nicolsama">Github</a>
+            <a href="https://www.linkedin.com/in/nicole-samanich-b21078136">LinkedIn</a>
             <a href="#">Angelist</a>
         </footer>
-
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-
-<script>
-    // Your web app's Firebase configuration
-    var firebaseConfig = {
-        apiKey: "AIzaSyBsOt6NM1cZ8f4sk95odFm3TuAR6--pzLk",
-        authDomain: "scuuba-duu.firebaseapp.com",
-        databaseURL: "https://scuuba-duu.firebaseio.com",
-        projectId: "scuuba-duu",
-        storageBucket: "scuuba-duu.appspot.com",
-        messagingSenderId: "465224114343",
-        appId: "1:465224114343:web:f97b0e7b19fca1d4f13b82"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-</script>
 </body>
 </html>
