--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./dist/main.css">
     <title>Scuuba Duu</title>
+    <meta property="og:image" content="/src/assets/scuuba-duu-app-img.png">
+
 </head>
 <body>
 <div class="container">
