--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="scuuba-duu-app-img.png">
+    <meta property="og:image" content="./src/assets/scuuba-duu-app-img.png">
     <link rel="stylesheet" href="./dist/main.css">
     <title>Scuuba Duu</title>
 
