fix link toggle issue

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="./src/assets/scuuba-duu-app-img.png">
+    <link rel="icon" href="./src/assets/favicon.jpg">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <script src="https://kit.fontawesome.com/f956292aa3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./dist/main.css">
     <title>Scuuba Duu</title>
 
@@ -59,10 +62,10 @@
 
         <footer>
             <a>Created by Nicole &#8594; </a>
-            <a href="http://www.illustration.nicolesamanich.com/">Website</a>
-            <a href="https://github.com/nicolsama">Github</a>
-            <a href="https://www.linkedin.com/in/nicole-samanich-b21078136">LinkedIn</a>
-            <a href="#">Angelist</a>
+            <a href="http://www.nicolesamanich.com/" target="blank"><i class="far fa-grin-wink"></i></a>
+            <a href="https://github.com/nicolsama" target="blank"><i class="devicon-github-plain"></i></a>
+            <a href="https://www.linkedin.com/in/nicole-samanich-b21078136" target="blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://angel.co/u/nicole-samanich"><i class="fab fa-angellist" target="blank"></i></a>
         </footer>
 
     </div>
